--- a/index.html
+++ b/index.html
@@ -6,5 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <h1>GOT Warriors!</h1>
+      <ul v-if="warriors.length > 0">
+        <li v-for="warrior in warriors">
+          {{ warrior.name }} expertieses in {{ warrior.weapon }}, level - {{
+          warrior.level }}
+        </li>
+      </ul>
+      <div v-else>No Warrior Found!</div>
+    </div>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script>
+      const { createApp } = Vue;
+
+      const app = createApp({
+        data() {
+          return {
+            warriors: [
+              { name: "Beristan Selmy", weapon: "Sword", level: "Pro" },
+              { name: "Arthur Dayne", weapon: "Sword", level: "Pro" },
+              { name: "Robert Baratheon", weapon: "Hammer", level: "Pro" },
+              { name: "Ned Stark", weapon: "Sword", level: "Semi Pro" },
+            ],
+          };
+        },
+      });
+
+      app.mount("#app");
+    </script>
+  </body>
 </html>
