--- a/playground.html
+++ b/playground.html
@@ -14,6 +14,14 @@
       <ul>
         <li v-for="number in listOfNumbers">{{ number }}</li>
       </ul>
+      <hr />
+      <h1>Counter</h1>
+      <p>{{ count }}</p>
+      <button @click="incrementCount">Increment Count</button>
+      <div>
+        <label for="incrementAmount">Increment By</label>
+        <input type="number" id="incrementAmount" v-model="incrementAmount" />
+      </div>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script>
@@ -21,9 +29,16 @@
       const app = createApp({
         data() {
           return {
+            count: 10,
+            incrementAmount: 8,
             message: "Hello, it works",
             listOfNumbers: [1, 2, 3, 4, 5],
           };
+        },
+        methods: {
+          incrementCount() {
+            this.count += this.incrementAmount;
+          },
         },
       });
       app.mount("#app");
